@startuml
'3. Liskov Substitution Principle (LSP): Обеспечить заменяемость объектов базового класса объектами
' производных классов без нарушения корректности программы'
class lesson3.lsp.Main {
+ {static} void main(String[])
}
class lesson3.lsp.Rectangle {
- int sideA
- int sideB
+ int getSideA()
+ int getSideB()
+ void setSideA(int)
+ void setSideB(int)
+ int getArea()
}
class lesson3.lsp.Square {
+ void setSideA(int)
+ void setSideB(int)
+ int getArea()
}
class lesson3.lsp.AreaCounter {
- Rectangle rectangle
+ void showArea()
}

lesson3.lsp.Rectangle <|-- lesson3.lsp.Square
lesson3.lsp.AreaCounter --> lesson3.lsp.Rectangle
lesson3.lsp.Main --> lesson3.lsp.Rectangle : Creates
lesson3.lsp.Main --> lesson3.lsp.Square : Creates
lesson3.lsp.Main --> lesson3.lsp.AreaCounter : Uses
@enduml